tests/baselines/reference/es6ImportNameSpaceImportWithExport.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
client.ts(3,1): error TS1191: An import declaration cannot have modifiers.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== server.ts (0 errors) ====
    export var a = 10;
    
==== client.ts (2 errors) ====
    export import * as nameSpaceBinding from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x = nameSpaceBinding.a;
    export import * as nameSpaceBinding2 from "server"; // Not referenced imports
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    